# healthcare-pipelines

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
src/health_pipeline/: __init__.py  definitions.py  resources.py  skeleton.py
src/health_pipeline/assets/: dhis2_assets.py
tests/: conftest.py  test_skeleton.py
