[project]
name = "health-pipeline"
version = "0.1.0"
description = "DHIS2 to DuckDB pipeline"
authors = [
    {name = "theycallmejeano",email = "jeangithae@outlook.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "dagster (>=1.12.17,<2.0.0)",
    "dagster-dbt (>=0.28.17,<0.29.0)",
    "dagster-duckdb (>=0.28.17,<0.29.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "dagster-webserver (>=1.12.17,<2.0.0)",
    "ruff (>=0.15.4,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
